kubernetes/apps/flux-system/flux-instance/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-controller-isolation
spec:
  podSelector:
    matchLabels:
      app: notification-controller
      app.kubernetes.io/component: notification-controller
      app.kubernetes.io/part-of: flux
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: envoy-external
      ports:
        - port: 9292
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              operator.prometheus.io/name: kube-prometheus-stack-prometheus
      ports:
        - port: 8080
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: flux
      ports:
        - port: 9090
          protocol: TCP
